SF Primes/src/objects/Account_Plan__c.object
<CustomObject>
    <fields>
        <fullName>DA_Help_List_Reason__c</fullName>
        <description>The workflow Update –DAHelp List Removed will clear this field once the dealer is removed from the help list.</description>
        <label>DA Help List Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Ad Performance – only use if recommended by DAA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitive Displacement – Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concurrent Digital Advertising program provided by OEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer says Sales misrepresented product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealership Personnel Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disengaged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dissatisfied with billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of Inventory / Co-Op Fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of Product Flexibility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pilot termination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan to move money to non-digital advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Products not delivering expected results</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting – Inability to Demonstrate ROI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting – Lack of Transparency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ROI - results not good enough</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signed up due to OEM influence</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DA_Help_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DA Help List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMA_Code__c</fullName>
        <label>DMA Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMA_or_Radius_Targeted_Details__c</fullName>
        <description>Detailed information about OMS Geography targeting.</description>
        <inlineHelpText>Detailed information about OMS Geography targeting.</inlineHelpText>
        <label>Targeting Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DMS_Primary__c</fullName>
        <label>DMS (Primary)</label>
        <picklist>
            <picklistValues>
                <fullName>ACS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADP ARG (EDS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autosoft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reynolds &amp; Reynolds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SelectQu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UCS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMS_Secondary__c</fullName>
        <label>DMS (Secondary)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DSM_Date_Last_Teamed__c</fullName>
        <description>This field is updated via a stored procedure that looks at related calls with a Type of Spoke to or Internal Teaming and an Attendee including the Digital Solutions Manager.  The requirement is that a teaming call that meets the listed criteria take place once per quarter.</description>
        <inlineHelpText>The last date of a Spoke To or Internal Teaming call that had a Digital Solutions Manager listed as an attendee.  There should be a teaming call logged every quarter. Updated nightly.</inlineHelpText>
        <label>DSM Date Last Teamed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DSM_Email__c</fullName>
        <description>Do not put this field on the page layout.  This should be populated by a trigger.</description>
        <label>DSM Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DSM_Nat_Ent__c</fullName>
        <formula>Account__r.Designated_DSM_Nat_Ent__r.FirstName &amp;&quot; &quot;&amp; Account__r.Designated_DSM_Nat_Ent__r.LastName &amp; &quot; &quot;&amp; 
IF(ISBLANK(Account__r.Designated_DSM_Nat_Ent__r.Phone), Account__r.Designated_DSM_Nat_Ent__r.MobilePhone ,Account__r.Designated_DSM_Nat_Ent__r.Phone)</formula>
        <inlineHelpText>National / Enterprise DSM</inlineHelpText>
        <label>DSM - Nat-Ent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSM_Teaming_Status__c</fullName>
        <description>This field is updated via a stored procedure that looks at attendees logged on both Spoke To and Internal Teaming calls.  The requirement is to team once per quarter.</description>
        <inlineHelpText>Will be &quot;Teaming Completed&quot; if there has been a Spoke To or Internal Teaming call that had a Digital Solutions Manager listed as an attendee in the last 90 days.  Updated nightly.</inlineHelpText>
        <label>DSM Teaming Status</label>
        <picklist>
            <picklistValues>
                <fullName>Teaming Recommended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teaming Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DSM__c</fullName>
        <formula>Account__r.Designated_DSM__r.FirstName &amp; &quot; &quot;&amp;  Account__r.Designated_DSM__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DSM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Welcome_Kit_Sent__c</fullName>
        <label>Date Welcome Kit Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dealer_Address__c</fullName>
        <description>This is the Digital Solutions Shipping Address from the Account.</description>
        <formula>Account__r.CBLTShipAddress__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Advocacy__c</fullName>
        <label>Dealer Advocacy</label>
        <picklist>
            <picklistValues>
                <fullName>Verbal Testimonial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Written Testimonial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Video Testimonial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Success Story</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Will Email OEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Will Call OEM</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Dealer_Brand_Name__c</fullName>
        <inlineHelpText>The name the dealership goes by if it differs from the system name.</inlineHelpText>
        <label>Dealer Brand Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dealer_Call_Attempts__c</fullName>
        <description>This field is updated via a stored procedure that looks at calls logged with Type Left Message and have a dealer contact in the contact field.  This is a count of calls within a given time period.  For Digital Advertising Analyst, the call period is over 90 days.</description>
        <inlineHelpText>The count of how many Left Message calls logged in the last 90 days.  Updated nightly.</inlineHelpText>
        <label>Dealer Call Attempts</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dealer_Call_Status__c</fullName>
        <description>This field is updated via a stored procedure that looks at Spoke To calls with a Contact at the dealership.  This is based on a quarterly call requirement. Values are Completed and Call Recommended.</description>
        <inlineHelpText>Indicates whether or not a Spoke To call was logged with the dealership in the last 90 days.</inlineHelpText>
        <label>Dealer Call Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dealer_Contributions_Link__c</fullName>
        <label>Dealer Contributions Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Dealer_Facebook_Page__c</fullName>
        <label>Dealer Facebook Page</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Dealer_Google_Page__c</fullName>
        <label>Dealer Google+ Page</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Dealer_Group_Name__c</fullName>
        <formula>Account__r.Dealer_Group_Name2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Group Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Hurt__c</fullName>
        <inlineHelpText>The primary issue being addressed by the product set(s) you are supporting.</inlineHelpText>
        <label>Dealer Hurt</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dealer_Logo__c</fullName>
        <description>If we have logo then field will show &quot;Yes&quot;, if not it will show &quot;No.&quot; A blank field indicates the status is unknown.</description>
        <inlineHelpText>If we have logo then field will show &quot;Yes&quot;, if not it will show &quot;No.&quot; A blank field indicates the status is unknown.</inlineHelpText>
        <label>Dealer Logo</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealer_Membership_Link__c</fullName>
        <label>Dealer Membership Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Dealer_Membership_Login__c</fullName>
        <label>Dealer Membership Login</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Time_Zone__c</fullName>
        <formula>Account__r.CB_SVC_DS_Time_Zone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Time Zone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Twitter_Page__c</fullName>
        <label>Dealer Twitter Page</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Dealer_Wordpress_Page__c</fullName>
        <label>Dealer Wordpress Page</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Dealer_YouTube_Page__c</fullName>
        <label>Dealer YouTube Page</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Dealership_Health__c</fullName>
        <inlineHelpText>5 = Active Cobalt promoter. 
4 = Positive on Cobalt, highly likely to upgrade. 
3 = May continue w/ product but needs on-going selling. 
2 = Cobalt relationship is shallow. 
1 = Dealer has made a firm decision to actively oppose Cobalt.</inlineHelpText>
        <label>Dealership Health</label>
        <picklist>
            <picklistValues>
                <fullName>5 - Champion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Positive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Skeptical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - Hostile</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Default_Model_Focus__c</fullName>
        <label>Default Model Focus</label>
        <picklist>
            <controllingField>Brand__c</controllingField>
            <picklistValues>
                <fullName>Acadia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acadia Denali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATS Coupe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATS Sedan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Camaro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canyon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canyon Denali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corvette</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cruze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTS Coupe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTS Sedan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTS-V Coupe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTS-V Sedan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enclave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Encore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equinox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escalade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Impala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lacrosse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malibu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sierra 1500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sierra 1500 Denali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sierra 2500 Denali HD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sierra 2500HD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sierra 3500 Denali HD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sierra 3500HD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silverado</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Digital_Advertising_Analyst__c</fullName>
        <description>This field pulls the value from the WebID.</description>
        <formula>WebID__r.Online_Marketing_Specialist__r.FirstName &amp;&quot; &quot;&amp; WebID__r.Online_Marketing_Specialist__r.LastName &amp; 
IF( isblank(WebID__r.Online_Marketing_Specialist__r.Extension ), &quot;&quot;, &quot; - Ext: &quot;&amp; WebID__r.Online_Marketing_Specialist__r.Extension )</formula>
        <label>Digital Advertising Analyst</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Digital_Advertising_Budget_DG__c</fullName>
        <description>Digital Advertising Budget for the Dealer Group. It will be updated in the nightly SQL sproc.</description>
        <inlineHelpText>Digital Advertising Budget for the Dealer Group.  It will be updated in the nightly SQL sproc.</inlineHelpText>
        <label>Digital Advertising Budget - DG</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Digital_Advertising_Budget__c</fullName>
        <description>This field will hold the rolled up Digital Advertising budget for the Account. It will be updated in the nightly SQL sproc.</description>
        <label>Digital Advertising Budget</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Digital_Advertising_Strategist_Email__c</fullName>
        <description>Email field for DA Strategist. Filled in by a trigger because we ran out of lookups and references.</description>
        <label>Digital Advertising Strategist Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Digital_Advertising_Strategist__c</fullName>
        <description>This is the Digital Advertising Strategist. The field is filled by a trigger reading the Webid.</description>
        <label>Digital Advertising Strategist</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Digital_Advisor_Date_Last_Teamed__c</fullName>
        <description>This field is updated via a stored procedure that looks at related calls with a Type of Spoke to or Internal Teaming and an Attendee including the Digital Advisor.  If there is not a Digital Advisor listed on the account, the field will list as “N/A.”  The requirement is that a teaming call that meets the listed criteria take place once per quarter.</description>
        <inlineHelpText>The last date of a Spoke To or Internal Teaming call that had a Digital Advisor listed as an attendee.  There should be a teaming call logged every quarter. Updated nightly.</inlineHelpText>
        <label>Digital Advisor Date Last Teamed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Digital_Solutions_Manager__c</fullName>
        <description>This field is updated by the value on the Account.</description>
        <formula>Account__r.Designated_DSM__r.FirstName &amp;&quot; &quot;&amp; Account__r.Designated_DSM__r.LastName &amp; &quot; &quot;&amp; 
IF(ISBLANK(Account__r.Designated_DSM__r.Phone), Account__r.Designated_DSM__r.MobilePhone ,Account__r.Designated_DSM__r.Phone)</formula>
        <label>Digital Solutions Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discovery_Last_Updated_By2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>TESTING ID WF RULE FEED</description>
        <label>Discovery Last Updated By2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Discovery_Last_Updated_By__c</fullName>
        <description>This field is populated by the workflow &quot;Update - Discovery Last Updated.&quot;</description>
        <inlineHelpText>This field displays the last user to update the Discovery field in real time.</inlineHelpText>
        <label>Discovery Last Updated By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discovery_Last_Updated__c</fullName>
        <description>This field is populated by the workflow &quot;Update - Discovery Last Updated.&quot;</description>
        <inlineHelpText>This field displays the last time Discovery was updated in real time.</inlineHelpText>
        <label>Discovery Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Discovery__c</fullName>
        <inlineHelpText>The steps taken to uncover the root issue. As a best practice, enter the newest item at the top and lead with the date you uncovered the point and your initials.</inlineHelpText>
        <label>Discovery</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>EMS_Account_Plan_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will be updated by a stored procedure that looks at related Account Plan records with record type EMS Account Plan on the account.</description>
        <inlineHelpText>This link will open the Email Marketing Specialist’s Account Plan on this account.</inlineHelpText>
        <label>EMS Account Plan Link</label>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipLabel>Account Plans (EMS Account Plan Link)</relationshipLabel>
        <relationshipName>EMS_Account_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EMS_Date_Last_Teamed__c</fullName>
        <description>This field is updated via a stored procedure that looks at related calls with a Type of Spoke to or Internal Teaming and an Attendee including the Email Marketing Specialist.  If the account does not have an Email Marketing product, the field will list “N/A.”  The requirement is that a teaming call that meets the listed criteria take place once per quarter.</description>
        <inlineHelpText>The last date of a Spoke To or Internal Teaming call that had an Email Marketing Specialist listed as an attendee.  There should be a teaming call logged every quarter. Updated nightly.</inlineHelpText>
        <label>EMS Date Last Teamed</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMS_Email__c</fullName>
        <description>Do not put this field on the page layout.  This should be populated by a trigger.</description>
        <label>EMS Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Marketing_ID__c</fullName>
        <formula>WebID__r.Owner_Marketing_Id__c</formula>
        <inlineHelpText>This field is maintained on the WebID.</inlineHelpText>
        <label>Email Marketing ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Marketing_Specialist__c</fullName>
        <description>This field is updated by a stored procedure that looks at the webid and account assignments to determine the Email Marketing Specialist and their phone number.</description>
        <label>Email Marketing Specialist</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engaged__c</fullName>
        <description>This will calculated every evening for the current calendar month. On day 1 of the month, the value resets to Not Engaged.</description>
        <inlineHelpText>This shows the Role grouping of the contacts logged against the &quot;Spoke To&quot; type calls for the current calendar month. This is updated each evening.</inlineHelpText>
        <label>Engaged</label>
        <picklist>
            <picklistValues>
                <fullName>Not Engaged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engaged – PPC/Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engaged – DP/GM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Enhancement_Requests__c</fullName>
        <inlineHelpText>This field will be displayed in a report that may be viewed by our clients.</inlineHelpText>
        <label>Enhancement Requests</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_Id_WebId__c</fullName>
        <label>External Id WebId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fixed_Operations_Details__c</fullName>
        <inlineHelpText>What fixed operations does the dealership offer? Ask the dealer to tell you a little about each area and how they stand apart from their competition.</inlineHelpText>
        <label>Fixed Operations Details</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Focus_Area_Recommended_Timing__c</fullName>
        <description>This field is hidden (not on the page layout) and updated by a stored procedure to determine which Record Type and Classification of Focus Area the report link should refer to.</description>
        <label>Focus Area Recommended Timing</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GAM_Email__c</fullName>
        <description>Do not put this field on the page layout.  This should be populated by a trigger.</description>
        <label>GAM Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>General_Dealer_Updates_Approvals__c</fullName>
        <inlineHelpText>Please provide primary contact information, who you work with, who approves campaigns, compliance and any critical approval notes.</inlineHelpText>
        <label>General Dealer Updates &amp; Approvals</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Google_Webmaster_Tools_Submitted_To__c</fullName>
        <inlineHelpText>Select Google Webmaster Tools Login.</inlineHelpText>
        <label>Google Webmaster Tools Submitted To</label>
        <picklist>
            <picklistValues>
                <fullName>seo.tools0@cdk.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>seo.tools2@cdk.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>seo.tools3@cdk.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>seo.tools4@cdk.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>seo.tools5@cdk.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>seo.tools6@cdk.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>seo.tools7@cdk.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>seo.tools8@cdk.com</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>High_Ranking_Competitive_Sites__c</fullName>
        <inlineHelpText>Indicate high ranking competitor sites and the vendor they are with.</inlineHelpText>
        <label>High Ranking Competitive Sites</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hot_List_Date__c</fullName>
        <description>This field is updated in the Update – Hot List Data Added and Update – Hot List Removed workflows. Not intended for page layout display.</description>
        <inlineHelpText>The last date a dealership was added to the Hot List.</inlineHelpText>
        <label>Hot List Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hot_List_Last_Updated__c</fullName>
        <description>This field is updated in the Update – Hot List Data Added and Update – Hot List Removed workflows.</description>
        <inlineHelpText>The last date a dealership was added to the Hot List.</inlineHelpText>
        <label>Hot List Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hot_List_Manager_Comments__c</fullName>
        <inlineHelpText>This field is only visible to Service Management.</inlineHelpText>
        <label>Hot List Manager Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hot_List_Reason__c</fullName>
        <label>Hot List Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Product/Data Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitive Displacement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disengaged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Products not delivering expected results</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hot_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hot List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Institutional_Hurt__c</fullName>
        <label>Institutional Hurt</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>KPI_Changes__c</fullName>
        <inlineHelpText>This field will be displayed in a report that may be viewed by our clients.</inlineHelpText>
        <label>KPI Changes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LMA_Analyst2_Email__c</fullName>
        <label>LMA Analyst2 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>LMA_Analyst_2__c</fullName>
        <label>LMA Analyst 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LMA_Analyst_Email__c</fullName>
        <label>LMA Analyst Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>LMA_Analyst__c</fullName>
        <label>LMA Analyst</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LMA_Code__c</fullName>
        <formula>Account__r.LMA_Code__c</formula>
        <label>LMA Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LMA_Regional_Director_Text__c</fullName>
        <label>LMA Regional Director</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LMA_Regional_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LMA Regional Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Plans4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LMA_Strategist_Email__c</fullName>
        <label>LMA Strategist Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>LMA_Super_Group__c</fullName>
        <label>LMA Super Group</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Agency_Activity_Logged_By2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Agency Activity Logged By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Plans3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Agency_Activity_Logged_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Agency Activity Logged By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Plans8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Agency_Interaction__c</fullName>
        <label>Last Agency Interaction</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Agency_Partner_Activity_Logged_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Agency Partner Activity Logged By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Plans7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Agency_Partner_Interaction__c</fullName>
        <label>Last Agency Partner Interaction</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Completed_Action__c</fullName>
        <inlineHelpText>This is the last completed Action Item in the Strategy History section. This is based on the Completed Date of the Strategy History Item.</inlineHelpText>
        <label>Last Completed Action</label>
        <summarizedField>Monthly_Maintenance__c.Completed_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Monthly_Maintenance__c.Open_Status__c</field>
            <operation>notEqual</operation>
            <value>Open</value>
        </summaryFilterItems>
        <summaryForeignKey>Monthly_Maintenance__c.Account_Plan__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_Email_Health_Update__c</fullName>
        <inlineHelpText>The last time an email health update went out.</inlineHelpText>
        <label>Last Email Health Update</label>
        <type>Date</type>
    </fields>
</CustomObject>